[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["ktiays <cuansky@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
"fluid-scroll" = { path = "../../" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "Node",
    "Window",
]
